Do not put line feed between removed lines

If a line is removed in a merge, then there should be no
line feed before it -- that will come from a subsequent
**non**-deleted line. This avoids double-newlines when a
line is removed.

(cherry picked from commit 942325c58a922b0297861ad3c2b1832248b1bf14)

BUG:437570
FIXED-IN:1.9.3