src/mergeresultwindow.cpp
@@ -2682,8 +2682,11 @@ bool MergeResultWindow::saveDocument(const QString& fileName, QTextCodec* pEncod
             {
                 const QString str = mel.getString(m_pldA, m_pldB, m_pldC);
 
-                if(line > 0) // Prepend line feed, but not for first line
+                if(line > 0 && !mel.isRemoved())
                 {
+                    // Put line feed between lines, but not for the first line
+                    // or between lines that have been removed (because there
+                    // isn't a line there).
                     textOutStream << lineFeed;
                 }
 
